# limitchain

./: Cargo.toml
src/: lib.rs  main.rs  parser.rs  prompt_template.rs
src/agent/: conversational.rs
src/chain/: character_chain.rs  llm_chain.rs  map_reduce.rs  map_rerank.rs  mod.rs  seq_chain.rs
src/client/: glm.rs  openai.rs
src/document/: mod.rs  text_embedding.rs
src/document/loader/: docx.rs  markdown.rs  mod.rs  xml.rs
src/document/persistent/: mod.rs
src/document/splitter/: markdown_splitter.rs  mod.rs  recursive_character_splitter.rs
src/llm/: mod.rs
src/llm/client/: glm.rs  mod.rs  openai.rs
src/schema/: memory.rs  mod.rs
src/vectordb/: milvus.rs  mod.rs
test_utils/: md_example.docx
