[package]
name = "limitchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.14"

http = "0.2"

anyhow = "1.0"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

regex = "1.5"
itertools = "0.11"

async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }

