[package]
name = "limitchain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.14"

http = "0.2"
# milvus-sdk-rust = "0.1.0"

anyhow = "1.0"

reqwest = "*"
reqwest-eventsource = "0.4.0"
jwt = "0.16"
hmac = "*"
sha2 = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

regex = "1.5"
itertools = "0.11"

async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15.7"


quick-xml = "0.30.0"
zip = "0.6"
